--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
+    <header></header>
+    <section class="test"></section>
+    <section class="shop"></section>
+    <footer></footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
