--- a/index.html
+++ b/index.html
@@ -74,7 +74,16 @@
         </div>
       </nav>
     </header>
-    <section class="test"></section>
+    <section class="test">
+      <span class="badge badge-primary">Primary</span>
+      <span class="badge badge-secondary">Secondary</span>
+      <span class="badge badge-success">Success</span>
+      <span class="badge badge-danger">Danger</span>
+      <span class="badge badge-warning">Warning</span>
+      <span class="badge badge-info">Info</span>
+      <span class="badge badge-light">Light</span>
+      <span class="badge badge-dark">Dark</span>
+    </section>
     <section class="shop"></section>
     <footer></footer>
 
