--- a/index.html
+++ b/index.html
@@ -84,7 +84,17 @@
       <span class="badge badge-light">Light</span>
       <span class="badge badge-dark">Dark</span>
     </section>
-    <section class="shop"></section>
+    <section class="shop">
+      <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item"><a class="page-link" href="#">Next</a></li>
+        </ul>
+      </nav>
+    </section>
     <footer></footer>
 
     <script
