--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@
       </nav>
     </section>
 
-
     <form>
       <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
@@ -124,7 +123,7 @@
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-        <footer>
+    <footer>
       <div class="card">
         <h5 class="card-header">Featured</h5>
         <div class="card-body">
@@ -137,7 +136,32 @@
         </div>
       </div>
     </footer>
-
+    <section class="alert">
+      <div class="alert alert-primary" role="alert">
+        A simple primary alert—check it out!
+      </div>
+      <div class="alert alert-secondary" role="alert">
+        A simple secondary alert—check it out!
+      </div>
+      <div class="alert alert-success" role="alert">
+        A simple success alert—check it out!
+      </div>
+      <div class="alert alert-danger" role="alert">
+        A simple danger alert—check it out!
+      </div>
+      <div class="alert alert-warning" role="alert">
+        A simple warning alert—check it out!
+      </div>
+      <div class="alert alert-info" role="alert">
+        A simple info alert—check it out!
+      </div>
+      <div class="alert alert-light" role="alert">
+        A simple light alert—check it out!
+      </div>
+      <div class="alert alert-dark" role="alert">
+        A simple dark alert—check it out!
+      </div>
+    </section>
 
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
